<resources>
    <string name="app_name">ClimaCast</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="or_with">Or with</string>
    <string name="google">Google</string>
    <string name="facebook">facebook</string>
    <string name="search">Search</string>
</resources>