<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="LOGIN"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07999998" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.018"
            tools:layout_editor_absoluteX="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:hint="@string/enter_your_username"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/baseline_account_circle_24"
                app:startIconTint="@color/white"
                app:endIconTint="@color/white"
                android:textColorHint="@color/white"
                android:elevation="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:inputType="text"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/white"
                app:endIconTint="@color/white"
                android:textColorHint="@color/white"
                android:elevation="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:inputType="text"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto_slab"
                    android:minWidth="24dp"
                    android:minHeight="24dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"/>

            </RelativeLayout>

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/sign_in"
                android:backgroundTint="@color/secondaryColor"
                android:textColor="@color/white"
                android:elevation="2dp"/>

          <!--  <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@color/white"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_toStartOf="@+id/text1"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center"
                    android:text="@string/or_with"
                    android:textColor="@color/white"/>

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/text1"
                    android:background="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/googleBtn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:text="@string/google"
                    app:icon="@drawable/google"
                    app:iconSize="24dp"
                    app:iconTint="@null"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/secondaryColor"
                    android:elevation="2dp"/>

                <Button
                    android:id="@+id/fbBtn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:text="@string/facebook"
                    app:icon="@drawable/facebook"
                    app:iconSize="24dp"
                    app:iconTint="@null"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/secondaryColor"
                    android:elevation="2dp"/>

            </RelativeLayout>-->

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>